mywork/force-app/main/default/objects/Build__c/Build__c.object-meta.xml
<CustomObject>
    <label>Build</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Build Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>