mywork/force-app/main/default/objects/Build__c/fields/Backup_URL__c.field-meta.xml
<CustomField>
    <fullName>Backup_URL__c</fullName>
    <inlineHelpText>Link to download a backup version of the components from the target</inlineHelpText>
    <label>Backup URL</label>
    <type>Url</type>
</CustomField>