mywork/force-app/main/default/objects/Build__c/fields/Deploy_Action__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Action__c</fullName>
    <formula>HYPERLINK('/apex/slingshot?id=' +  Id , 'Deploy')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deploy this build</inlineHelpText>
    <label>Deploy Action</label>
    <type>Text</type>
</CustomField>