mywork/force-app/main/default/objects/Build__c/fields/Is_Manual_Package_Parsed__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Package_Parsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if a manually uploaded package has been parsed.</description>
    <label>Is Manual Package Parsed</label>
    <type>Checkbox</type>
</CustomField>