mywork/force-app/main/default/objects/Build__c/fields/Jenkins_Build__c.field-meta.xml
<CustomField>
    <fullName>Jenkins_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jenkins Build</label>
    <referenceTo>Jenkins_Build__c</referenceTo>
    <relationshipLabel>Builds</relationshipLabel>
    <relationshipName>Builds</relationshipName>
    <type>Lookup</type>
</CustomField>