mywork/force-app/main/default/objects/Build__c/fields/Manual_Package_Parse_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Package_Parse_Failure_Reason__c</fullName>
    <label>Manual Package Parse Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>