mywork/force-app/main/default/objects/Build__c/fields/Manual_Upload__c.field-meta.xml
<CustomField>
    <fullName>Manual_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the build was created by manually uploading a build package</description>
    <label>Manual Upload</label>
    <type>Checkbox</type>
</CustomField>