mywork/force-app/main/default/objects/Build__c/fields/Package_URL__c.field-meta.xml
<CustomField>
    <fullName>Package_URL__c</fullName>
    <inlineHelpText>Link to download the build package</inlineHelpText>
    <label>Package URL</label>
    <type>Url</type>
</CustomField>