mywork/force-app/main/default/objects/Build__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Builds</relationshipLabel>
    <relationshipName>Builds</relationshipName>
    <type>Lookup</type>
</CustomField>