mywork/force-app/main/default/objects/Build__c/fields/Source_Repository__c.field-meta.xml
<CustomField>
    <fullName>Source_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Repository</label>
    <referenceTo>VC_Repository__c</referenceTo>
    <relationshipLabel>Builds</relationshipLabel>
    <relationshipName>Builds</relationshipName>
    <type>Lookup</type>
</CustomField>